<resources>
    <string name="app_name">Abode</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">New Member</string>
    <string name="btn_link_to_login">Already registered!!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="Next">Next</string>
    <string name="Enter_info">Enter Data</string>
    <string name="Find">Search</string>
    <string name="Name">Name</string>
    <string name="Add">Address</string>
    <string name="Tenants">Tenants</string>
    <string name="Landlords">Landlords</string>
    <string name="Continue">Continue</string>
    <string name="Submit">Submit</string>
    <string name="sure">Are you sure you want to SignOut</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_centre">CentreActivity</string>
    <string name="title_activity_center">CenterActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="rent">Rent</string>
    <string name="button">Button</string>
    <string name="make_changes">Make Changes</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile_No</string>
    <string name="address">Address</string>
    <string name="need">\t\tTenant verification is a process that assures the landlords a thorough background check on the tenants before permitting them to reside. The main intention is to ensure they pay their rents on time, whether any criminal records or troublesome. In order to confirm a safety of the landlords, this process helps.

        \n\t\tTenant verification is duly verified by the police. Tenant’s identity has to be verified by the local authorities by sending the tenant\'s detail to the police station of the last known residence for clearance of any crime. It has been found that terrorists usually camouflage by staying as innocent boarders or paying guest. So it\'s highly advisable to submit the same to assure peace of mind and safety.</string>
    <string name="Process">
        1) Download the Tenant Police \n \t \t Verification Form.\n
        2) Fill the form with both tenant and \n \t \t landlord details.\n
        3) Attach the latest photo of your tenant.\n
        4) Sign at the bottom of the form \n \t \t confirming that that details mentioned \t \t \t in the form are true and agree to it.\n
        5) Submit the filled form to the nearest \n \t \t police station.\n
        6) Collect your acknowledgement receipt  \t \t \t and keep as a reference.\n\n

        Best of luck</string>
    <string name="title_activity_maps">Map</string>
    <string name="about">\n\n\t\t We help find, book rental homes of choice across \nIndian cities. We assisst with move-in, provide home maintainence services from cleaning, damages to rent payment and even move-out.\n\t\t Whatever be your budget, whatever you may call a home (a bed, a room or an entire house), we have something for you!</string>
    <string name="manual_process"> \t SEND US THE FOLLOWING INFORMATION Via EMAIL \n \t\t1) Name \n \t\t2) Phone Number\n \t\t3) Photo \n \t\t4) Fee \n \t\t5) Scanned Copy of your police \n \t \t \t \t verification \n \t\t6) City</string>


</resources>