<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.srushti.abode.AccountActivity.MainActivity"
    android:background="@color/colorPrimaryDark">
        <EditText
            android:id="@+id/old_email"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="136dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="82dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/old_email"
            android:focusableInTouchMode="true"
            android:hint="@string/prompt_password"
            android:imeActionId="666"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="125dp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/password"
            android:focusableInTouchMode="true"
            android:hint="@string/new_pass"
            android:imeActionId="666"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="168dp" />

        <Button
            android:id="@+id/changePass"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="234dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="211dp" />

        <Button
            android:id="@+id/remove"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/changePass"
            android:layout_toStartOf="@+id/Next"
            android:layout_toLeftOf="@+id/Next"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_remove"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="259dp" />

        <Button
            android:id="@+id/change_password_button"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="162dp"
            android:text="@string/change_password"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/remove_user_button"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="58dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="82dp"
            android:text="@string/remove_user"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="408dp" />

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="456dp" />

        <TextView
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:hint="@string/email_id"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />


        <Button
            android:id="@+id/Enter_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/old_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/Enter_info" />

        <Button
            android:id="@+id/Find"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/old_email"
            android:layout_marginEnd="118dp"
            android:layout_marginRight="118dp"
            android:text="@string/Find" />


        <Button
            android:id="@+id/Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/Enter_data"
            android:text="@string/Next" />


</RelativeLayout>