<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.srushti.abode.AccountActivity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">


    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="223dp"
        android:alpha="0.35"
        android:background="@drawable/fade"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="165dp"
        android:alpha="0.35"
        android:background="@drawable/fade"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:imeActionId="666"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"/>


    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/btn_reset_password"
        android:layout_alignParentEnd="true"
        android:background="@drawable/go"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        />

        <!-- Link to Login Screen -->

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_alignParentRight="true"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="175dp"
        android:visibility="gone"/>

</RelativeLayout>
    </LinearLayout>
    </ScrollView>
