<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.srushti.abode.AccountActivity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="226dp"
                android:alpha="0.35"
                android:background="@drawable/fade"
                android:gravity="center"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/black" />


            <EditText
                android:id="@+id/password"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="167dp"
                android:alpha="0.35"
                android:background="@drawable/fade"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />


            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="55dp"
                android:background="@drawable/go" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                tools:ignore="SpUsage" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="132dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="142dp"
                tools:layout_editor_absoluteY="162dp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
